# SAP-Datasphere-CLI

./: .commitlintrc.json  .editorconfig  .gitignore  .pre-commit-config.yaml  .release-please-config.json  CHANGELOG.md  README.md  main.py  pyproject.toml  test3.py
.github/workflows/: ci.yml  release-please.yml  release.yml
datasphere/: analytical_models.py  automation.py  custom_types.py  helper.py  remote_tables.py  task_chains.py  views.py
sap_datasphere_automation/: __main__.py  actions.py  cli.py
sap_datasphere_automation/datasphere/: analytical_models.py  automation.py  remote_tables.py  task_chains.py  views.py
sap_datasphere_automation/utils/: filehandler.py  logging.py  screens.py
src/datasphere_cli/: __main__.py  actions.py  cli.py  concurrency.py  direct.py  models.py  settings.py
src/datasphere_cli/actions/: __init__.py  analytical_models.py  files.py  remote_tables.py  task_chains.py  views.py
src/datasphere_cli/cli/: __init__.py  app.py  commands.py  logo.py  screens.py
src/datasphere_cli/files/: records.py  storage.py  workspace.py
src/datasphere_cli/utils/: filehandler.py  screens.py  settings.py
static/: logo.py  style.tcss
tests/: test_actions.py  test_direct.py  test_imports.py  test_settings.py
utils/: filehandler.py  logging.py  menu.py  screens.py  types.py
