# ----- Build System -----

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# ----- Project Info -----

[project]
name = "sap-datasphere-automation"
version = "0.2.0"
description = "Unofficial TUI for automating recurring tasks in SAP Datasphere"
authors = [
    { name = "Peter Schwips" }
]
readme = "README.md"
license = { file = "LICENSE.txt" }
requires-python = ">=3.12,<3.14"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]
dependencies = [
    "beautifulsoup4>=4.13.4,<5.0.0",
    "python-dateutil>=2.9.0.post0,<3.0.0",
    "rich>=14.0.0,<15.0.0",
    "playwright>=1.54.0,<2.0.0",
    "pandas>=2.3.1,<3.0.0",
    "platformdirs>=4.4.0",
    "httpx>=0.28.1",
    "textual>=8.2.7",
]

[project.urls]
Homepage = "https://github.com/peterschwps/SAP-Datasphere-Automation"
Repository = "https://github.com/peterschwps/SAP-Datasphere-Automation"

[project.scripts]
sap-datasphere-cli = "sap_datasphere_automation.cli:main"
datasphere-cli = "sap_datasphere_automation.cli:main"
datasphere = "sap_datasphere_automation.cli:main"

# ----- Hatch -----

[tool.hatch.build.targets.wheel]
packages = ["sap_datasphere_automation"]

# ----- Tools -----

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = [
    "E",  # pycodestyle
    "F",  # Pyflakes
    "UP",  # pyupgrade
    "B",  # flake8-bugbear
    "SIM",  # flake8-simplify
    "G",  # flake8-logging-format
    "I",  # isort
]

[tool.pyright]
typeCheckingMode = "basic"

[dependency-groups]
dev = [
    "pyright>=1.1.405",
    "ruff>=0.13.0",
    "textual-dev>=1.8.0",
]
