# ----- Build System -----

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# ----- Project Info -----

[project]
name = "Datasphere-CLI"
version = "0.4.0"
description = "Unofficial TUI for automating recurring tasks in SAP Datasphere"
authors = [
    { name = "Peter Schwips" }
]
readme = "README.md"
license = { file = "LICENSE.txt" }
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
]
dependencies = [
    "datasphere-api>=0.2.0",
    "pydantic-settings>=2.6.0",
    "rich>=14.0.0,<15.0.0",
    "platformdirs>=4.4.0",
    "textual>=8.2.7",
]

[project.urls]
Homepage = "https://github.com/peterschwps/SAP-Datasphere-CLI"
Repository = "https://github.com/peterschwps/SAP-Datasphere-CLI"

[project.scripts]
sap-datasphere-cli = "datasphere_cli.cli:main"
datasphere-cli = "datasphere_cli.cli:main"
datasphere = "datasphere_cli.cli:main"

# ----- Hatch -----

[tool.hatch.build.targets.wheel]
packages = ["src/datasphere_cli"]

# ----- uv -----

# Permanent local development link to the Datasphere-API repository
# (CI and release builds use --no-sources to resolve it from PyPI).
[tool.uv.sources]
datasphere-api = { path = "../SAP-Datasphere-API", editable = true }

# ----- Tools -----

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = [
    "E",  # pycodestyle
    "F",  # Pyflakes
    "UP",  # pyupgrade
    "B",  # flake8-bugbear
    "SIM",  # flake8-simplify
    "G",  # flake8-logging-format
    "I",  # isort
]

[tool.pyright]
typeCheckingMode = "basic"

[tool.pytest.ini_options]
addopts = "-ra --strict-markers --strict-config"
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pyright>=1.1.405",
    "pytest>=9.0.0",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.13.0",
    "textual-dev>=1.8.0",
]
